#108: Fixed truncated languages in menu.

--- a/src/styles/modules/_body.scss
+++ b/src/styles/modules/_body.scss
@@ -107,7 +107,7 @@ body {
 
     .Select {
       display: inline-block;
-      width: 90px;
+      width: 130px;
       vertical-align: middle;
 
       .Select-control {
